Ajustes de links e qualidade de imagem

--- a/aplicacoes/energia-solar.html
+++ b/aplicacoes/energia-solar.html
@@ -345,7 +345,7 @@
                     <h3>Exemplo de dimensionamento:</h3>
                     <p>Para um consumo diário de 5kWh, com 2 dias de autonomia, DoD de 80% e eficiência do sistema de 90%:</p>
                     <p>Capacidade = 5000 × 2 ÷ (0.8 × 0.9) = 13.889Wh ≈ 14kWh</p>
-                    <p>Com células <a href="/pages/18650-35v.html">18650 35V</a> (3.6V, 3.5Ah), precisaríamos de aproximadamente 1111 células para um sistema de 14kWh.</p>
+                    <p>Com células <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">18650 35V</a> (3.6V, 3.5Ah), precisaríamos de aproximadamente 1111 células para um sistema de 14kWh.</p>
                 </div>
                 
                 <h2 class="aplicacao-section-title">Configurações Típicas para Energia Solar</h2>
