--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <meta property="og:title" content="Overcel | Células de Bateria 18650 Importadas para Fabricantes de Baterias">
     <meta property="og:description"
         content="Fornecemos células de bateria 18650 de alta qualidade da EVE para fabricantes de packs de baterias para bikes, patinetes e sistemas de armazenamento. Células 26V, 33V e 35V com entrega para todo Brasil.">
-        <meta property="og:image" content="https://www.overcel.com.br/assets/images/og-image.png">
+    <meta property="og:image" content="https://www.overcel.com.br/assets/images/og-image.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -34,7 +37,7 @@
     <meta property="twitter:title" content="Overcel | Células de Bateria 18650 Importadas para Fabricantes de Baterias">
     <meta property="twitter:description"
         content="Fornecemos células de bateria 18650 de alta qualidade da EVE para fabricantes de packs de baterias para bikes, patinetes e sistemas de armazenamento.">
-    <meta property="twitter:image" content="https://www.overcel.com.br/assets/images/og-image.jpg">
+    <meta property="twitter:image" content="https://www.overcel.com.br/assets/images/og-image.png">
 
     <!-- Google verification -->
     <meta name="google-site-verification" content="seu-código-de-verificação">
@@ -142,22 +145,12 @@
 
                 <div class="menu-overlay"></div>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="#hero" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#sobre" class="nav-link">Sobre Nós</a></li>
-                    <li class="nav-item"><a href="#produtos" class="nav-link">Produtos</a></li>
-                    <li class="nav-item"><a href="#aplicacoes" class="nav-link">Aplicações</a></li>
-                    <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="/#sobre" class="nav-link">Sobre Nós</a></li>
+                    <li class="nav-item"><a href="/#produtos" class="nav-link">Produtos</a></li>
+                    <li class="nav-item"><a href="/#aplicacoes" class="nav-link">Aplicações</a></li>
+                    <li class="nav-item"><a href="/#contato" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="/blog.html" class="nav-link">Blog</a></li>
-
-                    <!-- Remove this duplicate button -->
-                    <!-- 
-                <li class="nav-item">
-                    <a href="https://api.whatsapp.com/send?phone=5511999714280" class="mobile-comprar-btn">
-                        <i class="fab fa-whatsapp"></i>
-                        Comprar agora
-                    </a>
-                </li>
-                -->
                 </ul>
             </nav>
         </div>
@@ -276,7 +269,8 @@
                         <p class="produto-description">Célula com excelente custo-benefício, perfeita para aplicações de
                             menor consumo e projetos onde o peso e preço são fatores importantes.</p>
                         <div class="produto-actions">
-                            <a href="bateria-li-ion-18650-recarregavel/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                            <a href="bateria-li-ion-18650-recarregavel/18650.html" class="btn btn-outline btn-sm">Ver
+                                Detalhes</a>
                             <a href="https://api.whatsapp.com/send?phone=5511999714280"
                                 class="btn btn-primary btn-sm">Comprar</a>
                         </div>
@@ -308,7 +302,8 @@
                         <p class="produto-description">Célula de alta capacidade com 3300mAh, ideal para montagem de
                             baterias para bicicletas elétricas, patinetes e sistemas de armazenamento de energia.</p>
                         <div class="produto-actions">
-                            <a href="bateria-li-ion-18650-recarregavel/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                            <a href="bateria-li-ion-18650-recarregavel/18650-33v.html"
+                                class="btn btn-outline btn-sm">Ver Detalhes</a>
                             <a href="https://api.whatsapp.com/send?phone=5511999714280"
                                 class="btn btn-primary btn-sm">Comprar</a>
                         </div>
@@ -341,7 +336,8 @@
                         <p class="produto-description">Nossa célula de maior capacidade, projetada para demandas de alta
                             performance em veículos elétricos e sistemas que exigem máxima potência.</p>
                         <div class="produto-actions">
-                            <a href="bateria-li-ion-18650-recarregavel/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                            <a href="bateria-li-ion-18650-recarregavel/18650-35v.html"
+                                class="btn btn-outline btn-sm">Ver Detalhes</a>
                             <a href="https://api.whatsapp.com/send?phone=5511999714280"
                                 class="btn btn-primary btn-sm">Comprar</a>
                         </div>
@@ -434,16 +430,15 @@
                         equipamentos diversos.</p>
                 </a>
 
-                <a href="aplicacoes/ups-nobreak.html" class="aplicacao-card clickable">
+                <a href="aplicacoes/ferramentas.html" class="aplicacao-card clickable">
                     <div class="aplicacao-icon">
                         <i class="fas fa-car-battery"></i>
                     </div>
-                    <h3 class="aplicacao-title">UPS e Nobreaks</h3>
-                    <p class="aplicacao-description">Células para montagem de sistemas de alimentação ininterrupta e
-                        backup de energia.</p>
+                    <h3 class="aplicacao-title">Ferramentas Elétricas</h3>
+                    <p class="aplicacao-description">Células para montagem de baterias de ferramentas elétricas.</p>
                 </a>
 
-                <a href="aplicacoes/ferramentas.html" class="aplicacao-card clickable">
+                <a href="aplicacoes/ups-nobreak.html" class="aplicacao-card clickable">
                     <div class="aplicacao-icon">
                         <i class="fas fa-industry"></i>
                     </div>
@@ -733,9 +728,9 @@
                         <div class="footer-links-column">
                             <h3>Produtos</h3>
                             <ul>
-                                <li><a href="/pages/18650.html">Células 18650 26V</a></li>
-                                <li><a href="/pages/18650-33v.html">Células 18650 33V</a></li>
-                                <li><a href="/pages/18650-35v.html">Células 18650 35V</a></li>
+                                <li><a href="/bateria-li-ion-18650-recarregavel/18650.html">Células 18650 26V</a></li>
+                                <li><a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Células 18650 33V</a></li>
+                                <li><a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Células 18650 35V</a></li>
                             </ul>
                         </div>
 
