--- a/footer-template.html
+++ b/footer-template.html
@@ -40,9 +40,9 @@
                     <div class="footer-links-column">
                         <h3>Produtos</h3>
                         <ul>
-                            <li><a href="/pages/18650.html">Células 18650 26V</a></li>
-                            <li><a href="/pages/18650-33v.html">Células 18650 33V</a></li>
-                            <li><a href="/pages/18650-35v.html">Células 18650 35V</a></li>
+                            <li><a href="/bateria-li-ion-18650-recarregavel/18650.html">Células 18650 26V</a></li>
+                            <li><a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Células 18650 33V</a></li>
+                            <li><a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Células 18650 35V</a></li>
                         </ul>
                     </div>
 
