--- a/sitemap.html
+++ b/sitemap.html
@@ -100,14 +100,17 @@
                     </h2>
                     <ul class="sitemap-links">
                         <li>
-                            <a href="/bateria-li-ion-18650-recarregavel/18650.html">Célula 18650 26V</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650.html">Células 18650 26V</a>
                         </li>
                         <li>
-                            <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Célula 18650 33V</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Células 18650 33V</a>
                         </li>
                         <li>
-                            <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Célula 18650 35V</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Células 18650 35V</a>
                         </li>
+                    </ul>
+                    
+                    <ul class="sitemap-links">
                         <li>
                             <a href="/bateria-li-ion-18650-recarregavel/18650.html">Comparativo de Células</a>
                         </li>
@@ -126,19 +129,16 @@
                             <a href="/aplicacoes/bicicletas-eletricas.html">Bicicletas Elétricas</a>
                         </li>
                         <li>
-                            <a href="/aplicacoes/patinetes-eletricos.html">Patinetes Elétricos</a>
+                            <a href="/aplicacoes/patinetes.elétricos.html">Patinetes Elétricos</a>
                         </li>
                         <li>
                             <a href="/aplicacoes/energia-solar.html">Energia Solar</a>
                         </li>
                         <li>
-                            <a href="/aplicacoes/ferramentas-eletricas.html">Ferramentas Elétricas</a>
+                            <a href="/aplicacoes/ferramentas.html">Ferramentas Elétricas</a>
                         </li>
                         <li>
-                            <a href="/aplicacoes/ups-nobreaks.html">UPS e Nobreaks</a>
-                        </li>
-                        <li>
-                            <a href="/aplicacoes/industriais.html">Aplicações Industriais</a>
+                            <a href="/aplicacoes/ups-nobreak.html">UPS e Nobreaks</a>
                         </li>
                     </ul>
                 </div>
@@ -172,22 +172,25 @@
                     </h2>
                     <ul class="sitemap-links">
                         <li>
-                            <a href="/blog/diferenca-entre-celulas-18650.html">Diferenças Entre Células 18650</a>
+                            <a href="/blog/bms-explicado.html">BMS Explicado: Protegendo sua Bateria de Lítio</a>
                         </li>
                         <li>
-                            <a href="/blog/como-montar-pack-bateria.html">Como Montar um Pack de Bateria</a>
+                            <a href="/blog/tutorial-bateria-torque.html">Guia: Entendendo Torque em Baterias</a>
                         </li>
                         <li>
-                            <a href="/blog/baterias-para-bicicletas-eletricas.html">Baterias para Bicicletas Elétricas</a>
+                            <a href="/blog/bateria-ebike.html">Baterias para Bicicletas Elétricas</a>
                         </li>
                         <li>
-                            <a href="/blog/armazenamento-energia-solar.html">Armazenamento de Energia Solar</a>
+                            <a href="/blog/comparativo-baterias-solares.html">Comparativo: Tecnologias de Armazenamento</a>
                         </li>
                         <li>
-                            <a href="/blog/cuidados-baterias-litio.html">Cuidados com Baterias de Lítio</a>
+                            <a href="/blog/cuidados-bateria-litio.html">Cuidados Essenciais com Baterias de Lítio</a>
                         </li>
                         <li>
-                            <a href="/blog/categorias.html">Todas as Categorias</a>
+                            <a href="/blog/dimensionamento-ups.html">Guia de Dimensionamento UPS</a>
+                        </li>
+                        <li>
+                            <a href="/blog/baterias-agvs-industriais.html">Baterias para AGVs Industriais</a>
                         </li>
                     </ul>
                 </div>
@@ -198,16 +201,16 @@
                     </h2>
                     <ul class="sitemap-links">
                         <li>
-                            <a href="/politica-privacidade.html">Política de Privacidade</a>
+                            <a href="/legal/politica-privacidade.html">Política de Privacidade</a>
                         </li>
                         <li>
-                            <a href="/termos-condicoes.html">Termos e Condições</a>
+                            <a href="/legal/termos-condicoes.html">Termos e Condições</a>
                         </li>
                         <li>
-                            <a href="/politica-cookies.html">Política de Cookies</a>
+                            <a href="/legal/politica-cookies.html">Política de Cookies</a>
                         </li>
                         <li>
-                            <a href="/politica-devolucao.html">Política de Devolução</a>
+                            <a href="/legal/politica-devolucao.html">Política de Devolução</a>
                         </li>
                     </ul>
                 </div>
