--- a/index.html
+++ b/index.html
@@ -184,6 +184,74 @@
         </div>
     </section>
 
+    <!-- Nova Seção de Novidades -->
+    <section id="novidades" class="novidades-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Novidades na Overcel</h2>
+                <p class="section-subtitle">Agora oferecemos fitas de níquel e termo-retráteis para completar suas
+                    soluções em baterias</p>
+            </div>
+
+            <div class="novidades-content">
+                <div class="novidades-text">
+                    <h3>Expandimos Nossa Linha de Produtos</h3>
+                    <p>Para atender melhor nossos clientes fabricantes de packs de bateria, agora oferecemos
+                        <strong>fitas de níquel</strong> e <strong>termo-retráteis</strong> de alta qualidade,
+                        complementando nossa linha de células 18650.
+                    </p>
+
+                    <div class="novidades-features">
+                        <div class="feature-item">
+                            <i class="fas fa-ribbon"></i>
+                            <span>Fitas de Níquel Premium</span>
+                        </div>
+                        <div class="feature-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Termo-retráteis Resistentes</span>
+                        </div>
+                        <div class="feature-item">
+                            <i class="fas fa-tools"></i>
+                            <span>Soluções Completas para Montagem</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="novidades-produtos">
+                    <div class="novidade-card">
+                        <div class="novidade-image">
+                            <img src="assets/images/fita-niquel-novidade.png" alt="Fita de Níquel para Bateria"
+                                class="novidade-img">
+                        </div>
+                        <div class="novidade-info">
+                            <h4>Fita de Níquel</h4>
+                            <p>Fitas de níquel puro de alta condutividade para conexões seguras entre células</p>
+                            <span class="novidade-badge">Novo</span>
+                        </div>
+                    </div>
+
+                    <div class="novidade-card">
+                        <div class="novidade-image">
+                            <img src="assets/images/termoretratil-novidade.png" alt="Termo-retrátil para Bateria"
+                                class="novidade-img">
+                        </div>
+                        <div class="novidade-info">
+                            <h4>Termo-retrátil</h4>
+                            <p>Isolamento térmico e proteção para packs de bateria com qualidade profissional</p>
+                            <span class="novidade-badge">Novo</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="novidades-cta">
+                <a href="#produtos" class="btn btn-cta pulse-animation">
+                    <i class="fas fa-star"></i> Confira as Novidades
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Sobre Seção -->
     <section id="sobre" class="sobre-section">
         <div class="container">
@@ -344,9 +412,77 @@
                     </div>
                 </div>
 
-                <!-- Produto 4 (Em Breve) -->
+                <!-- Produto 4 - Fita de Níquel -->
+                <div class="produto-card">
+                    <div class="produto-badge new">Novo</div>
+                    <div class="produto-image">
+                        <img src="assets/images/fita-niquel.jpg" alt="Fita de Níquel para conexão de baterias"
+                            class="produto-img">
+                    </div>
+                    <div class="produto-details">
+                        <h3 class="produto-title">Fita de Níquel</h3>
+                        <div class="produto-specs">
+                            <div class="spec-item">
+                                <i class="fas fa-ruler-horizontal"></i>
+                                <span>Várias larguras</span>
+                            </div>
+                            <div class="spec-item">
+                                <i class="fas fa-award"></i>
+                                <span>99.9% Puro</span>
+                            </div>
+                            <div class="spec-item">
+                                <i class="fas fa-bolt"></i>
+                                <span>Alta Condutividade</span>
+                            </div>
+                        </div>
+                        <p class="produto-description">Fitas de níquel puro de alta condutividade para conexões seguras
+                            e duradouras entre células de bateria em packs profissionais.</p>
+                        <div class="produto-actions">
+                            <a href="/produtos/fita-niquel.html" class="btn btn-outline btn-sm">Ver
+                                Detalhes</a>
+                            <a href="https://api.whatsapp.com/send?phone=5511999714280"
+                                class="btn btn-primary btn-sm">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Produto 5 - Termo-retrátil -->
+                <div class="produto-card">
+                    <div class="produto-badge new">Novo</div>
+                    <div class="produto-image">
+                        <img src="assets/images/termoretratil.jpg"
+                            alt="Termo-retrátil para isolamento de baterias" class="produto-img">
+                    </div>
+                    <div class="produto-details">
+                        <h3 class="produto-title">Termo-retrátil</h3>
+                        <div class="produto-specs">
+                            <div class="spec-item">
+                                <i class="fas fa-shield-alt"></i>
+                                <span>Isolamento</span>
+                            </div>
+                            <div class="spec-item">
+                                <i class="fas fa-thermometer-half"></i>
+                                <span>Resistente</span>
+                            </div>
+                            <div class="spec-item">
+                                <i class="fas fa-compress"></i>
+                                <span>Encolhimento 2:1</span>
+                            </div>
+                        </div>
+                        <p class="produto-description">Termo-retrátil de alta qualidade para isolamento e proteção de
+                            packs de bateria, garantindo segurança e durabilidade.</p>
+                        <div class="produto-actions">
+                            <a href="/produtos/termo-retratil.html" class="btn btn-outline btn-sm">Ver
+                                Detalhes</a>
+                            <a href="https://api.whatsapp.com/send?phone=5511999714280"
+                                class="btn btn-primary btn-sm">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Produto 6 (Em Breve) -->
                 <div class="produto-card coming-soon">
-                    <div class="produto-badge new">Novidade</div>
+                    <div class="produto-badge new">Em breve</div>
                     <div class="produto-image">
                         <img src="assets/images/celulas/celulanova.png"
                             alt="Célula LFP Prismática para armazenamento de energia" class="produto-img">
@@ -729,8 +865,10 @@
                             <h3>Produtos</h3>
                             <ul>
                                 <li><a href="/bateria-li-ion-18650-recarregavel/18650.html">Células 18650 26V</a></li>
-                                <li><a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Células 18650 33V</a></li>
-                                <li><a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Células 18650 35V</a></li>
+                                <li><a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Células 18650 33V</a>
+                                </li>
+                                <li><a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Células 18650 35V</a>
+                                </li>
                             </ul>
                         </div>
 
